--- a/tests/index.html
+++ b/tests/index.html
@@ -5,6 +5,10 @@
     <title>event.js tests</title>
     <link rel="stylesheet" href="../support/sink/src/sink.css" type="text/css">
     <script src="../support/sink/src/sink.js"></script>
+    <script src="../support/syn/synthetic.js"></script>
+    <script src="../support/syn/mouse.js"></script>
+    <script src="../support/syn/browsers.js"></script>
+    <script src="../support/syn/key.js"></script>
     <script src="../src/event.js"></script>
   </head>
   <body>
