update the readme, adds simple delegation support

--- a/tests/index.html
+++ b/tests/index.html
@@ -9,6 +9,7 @@
     <script src="../support/syn/mouse.js"></script>
     <script src="../support/syn/browsers.js"></script>
     <script src="../support/syn/key.js"></script>
+    <script src="../support/qwery/qwery.js"></script>
     <script src="../src/event.js"></script>
     <style>
      #fixtures {
@@ -24,7 +25,10 @@
      <div id="fixtures">
        <input id="input" type="text" />
        <div id="foo">
-         <div id="bar"></div>
+         <div id="bar" class="bar">
+            <div id="bang" class="bang"></div>
+         </div>
+         <div id="baz" class="baz"></div>
        </div>
      </div>
   </body>
