make all events in tests be in the dom (unless otherwise objects)

--- a/tests/index.html
+++ b/tests/index.html
@@ -24,6 +24,7 @@
      <script src="tests.js"></script>
      <div id="fixtures">
        <input id="input" type="text" />
+       <input id="input2" type="text" />
        <div id="foo">
          <div id="bar" class="bar">
             <div id="bang" class="bang"></div>
