--- a/tests/index.html
+++ b/tests/index.html
@@ -10,7 +10,7 @@
     <script src="../support/syn/browsers.js"></script>
     <script src="../support/syn/key.js"></script>
     <script src="../support/qwery/qwery.js"></script>
-    <script src="../src/event.js"></script>
+    <script src="../src/bean.js"></script>
     <style>
      #fixtures {
        position:absolute;
