noConflict tests stolen from qwery

--- a/tests/index.html
+++ b/tests/index.html
@@ -10,6 +10,12 @@
     <script src="../support/syn/browsers.js"></script>
     <script src="../support/syn/key.js"></script>
     <script src="../support/qwery/qwery.js"></script>
+    <script type="text/javascript">
+      // test for noConflict()
+      function bean() {
+        return 'success'
+      }
+    </script>
     <script src="../src/bean.js"></script>
     <style>
      #fixtures {
