added benchmarks.html to test changes
Added nwevents as a submodule as a reference, along with jQuery
for benchmarking (even though they are not directly comparable
to Bean).
Added fixes for noConflict() to bean.js so we can compare it
as original to src/bean.js as the new code.

--- a/tests/index.html
+++ b/tests/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-    <title>event.js tests</title>
+    <title>Bean tests</title>
     <link rel="stylesheet" href="../support/sink/src/sink.css" type="text/css">
     <script src="../support/sink/src/sink.js"></script>
     <script src="../support/syn/synthetic.js"></script>
@@ -25,7 +25,7 @@
     </style>
   </head>
   <body>
-    <h1>Event Tests</h1>
+    <h1>Bean Tests</h1>
      <ol id="tests"></ol>
      <script src="tests.js"></script>
      <div id="fixtures">
