remove() and other fixes + more tests + cleanup

--- a/tests/benchmark.html
+++ b/tests/benchmark.html
@@ -16,8 +16,8 @@
     <table cellpadding="0" cellspacing="0" >
       <thead>
         <th></th>
-        <th>Bean</th>
-        <th>New Bean</th>
+        <th>../bean.js</th>
+        <th>../src/bean.js</th>
         <th>NWEvents</th>
         <th>jQuery</th>
       </thead>
