--- a/tests/index.html
+++ b/tests/index.html
@@ -37,6 +37,9 @@
          </div>
          <div id="baz" class="baz"></div>
        </div>
+       <div id="stopper">
+         <input type="text" id="txt" value="">
+       </div>
      </div>
   </body>
 </html>
