added external test support libs

--- a/tests/tests.html
+++ b/tests/tests.html
@@ -8,7 +8,7 @@
 
 <script src="../node_modules/buster/resources/buster-test.js"></script>
 
-<script src="support/qwery/qwery.js"></script>
+<script src="../node_modules/qwery/qwery.js"></script>
 <script src="support/syn/synthetic.js"></script>
 <script src="support/syn/mouse.js"></script>
 <script src="support/syn/browsers.js"></script>
