--- a/integration/index.html
+++ b/integration/index.html
@@ -2,27 +2,120 @@
 <html lang="en-us">
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-    <title>ender integration</title>
+    <title>Ender Integration Test</title>
+    <style type="text/css">
+      body {
+        font: 300 12px 'helvetica neue', helvetica, arial;
+      }
+      fieldset {
+        padding: 5px;
+        margin : 5px;
+        border : solid 1px;
+      }
+      fieldset:nth-child(6n+1) { border-color: red; }
+      fieldset:nth-child(6n+2) { border-color: orange; }
+      fieldset:nth-child(6n+3) { border-color: yellow; }
+      fieldset:nth-child(6n+4) { border-color: green; }
+      fieldset:nth-child(6n+5) { border-color: blue; }
+      fieldset:nth-child(6n+6) { border-color: purple; }
+    </style>
+  </head>
+
+  <body>
+
+    <div id="tests"></div>
+
     <script src="ender.js"></script>
-    <script type="text/javascript" id="scr">
+
+    <script type="text/javascript">
+      var fixtureOuter = '<fieldset><legend></legend><pre><code></code></pre></fieldset>'
+        , tests = 0
+
+        , test = function (name, html, cb) {
+            $(fixtureOuter)
+              .attr('id', 'test' + (++tests))
+              .appendTo('#tests')
+              .down('legend')
+              .text('Test #' + ': ' + name)
+              .after(html)
+              .up('fieldset')
+              .down('> pre > code')
+              .html(cb.toString().replace(/^function \([^\)]*\) \{\n/, '').replace(/^\s{12,14}/gm, '').replace(/\n\}$/, ''))
+            cb(tests)
+          }
+
       $.domReady(function () {
-        $('#test').delegate('#clickme', 'click', function (e) {
-          alert('delegated')
-        })
+
+        test(
+            // name
+            'delegate()'
+            // fixture
+          ,   '<p>clicking me shouldn\'t do anything</p>'
+            + '<p id="clickme" style="background:#ff5;">#clickme, delegated event</p>'
+            + '<p>clicking me shouldn\'t do anything</p>'
+            // execute
+          , function (index) {
+              $('#test' + index).delegate('#clickme', 'click', function (e) {
+                alert('delegated')
+              })
+            }
+        )
+
+        test(
+            // name
+            'on() style delegation'
+            // fixture
+          ,   '<p>clicking me shouldn\'t do anything</p>'
+            + '<p id="clickme2" style="background:#ff5;">#clickme, delegated event</p>'
+            + '<p>clicking me shouldn\'t do anything</p>'
+            // execute
+          , function (index) {
+              $('#test' + index).on('click', '#clickme2', function (e) {
+                alert('delegated')
+              })
+            }
+        )
+
+        test(
+            // name
+            'click()'
+            // fixture
+          , '<p id="directclick" style="background:#ff5;">#directclick, click() event</p>'
+            // execute
+          , function () {
+              $('#directclick').click(function (e) { alert('click()!') })
+            }
+        )
+
+        test(
+            // name
+            'one()'
+            // fixture
+          , '<p id="one" style="background:#ff5;">#one, click event should work only once</p>'
+            // execute
+          , function () {
+              $('#one').one('click', function (e) { alert('click()!') })
+            }
+        )
+
+        test(
+            // name
+            'stop()'
+            // fixture
+          , '<p style="background:#ff5;">#stopper, typing in here should not result in characters: <input type="text" id="stopper"></p>'
+            // execute
+          , function (index) {
+              $('#test' + index).on('keydown', function () {
+                alert('SHOULD NOT GET THIS!')
+              })
+              $('#stopper').on('keydown', function (e) {
+                e.stop()
+              })
+            }
+        )
       })
     </script>
-    <script type="text/javascript">
-      $.domReady(function () { $('code').text($('#scr')[0].innerHTML) })
-    </script>
-  </head>
-  <body>
-    <p>this is an integration test page for the Ender bridge</p>
-    <fieldset id="test" style="padding:20px;margin:20px;border:solid 1px red;">
-      <legend>#test</legend>
-      <p>clicking me shouldn't do anything</p>
-      <p id="clickme" style="background:#ff5;">#clickme, delegated event</p>
-      <p>clicking me shouldn't do anything</p>
-    </fieldset>
-    <pre><code></code></pre>
+
   </body>
+
 </html>
